[feat][test] getEither  테스트, 구현 완료 : 조윤재
